[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rst.linker"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Tools for adding metadata and hyperlinks to reStructuredText"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Framework :: Sphinx :: Extension",
]
requires-python = ">=3.8"
dependencies = [
	"python-dateutil",
	'importlib_metadata; python_version < "3.8"',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/rst.linker"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	'pytest-mypy; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"path",
	"types-python-dateutil",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	# workaround for sphinx/sphinx-doc#11662
	"sphinx < 7.2.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[tool.setuptools_scm]
