[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = rst.linker
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Tools for adding metadata and hyperlinks to reStructuredText
long_description = file:README.rst
url = https://github.com/jaraco/rst.linker
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Framework :: Sphinx :: Extension

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	six
	python-dateutil
	importlib_metadata; python_version < "3.8"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov

	# local
	path.py

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
