[metadata]
name = rst.linker
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Tools for adding metadata and hyperlinks to reStructuredText
long_description = file:README.rst
url = https://github.com/jaraco/rst.linker
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Sphinx :: Extension

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	python-dateutil
	importlib_metadata; python_version < "3.8"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	path
	types-python-dateutil

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
